feat:[week-3] step이 실행되지 않음

--- a/infra/infra-mongo/src/main/resources/application-infra-mongo.yml
+++ b/infra/infra-mongo/src/main/resources/application-infra-mongo.yml
@@ -6,6 +6,8 @@ spring:
       database: test
       port: 27017
       host: localhost
+      username: test
+      password: inaratest
 
 ---
 spring:
