feat:[week-3] step이 실행되지 않던건 spring batch 3부터 @springbatch processing 어노테이션 붙이면 default config 적용이 안돼서 그런 것

--- a/infra/infra-rds/src/main/resources/application-infra-rds.yml
+++ b/infra/infra-rds/src/main/resources/application-infra-rds.yml
@@ -10,7 +10,7 @@ spring:
         connection.provider_disables_autocommit: true
     hibernate:
       ddl-auto: none
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 
 ---
