feat:[week-5] coupon 발급 api 최종 정리, redisson config 완료 - @value 는 다시 봐야함

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,16 @@ services:
     restart: always
     ports:
       - 27017:27017
+  redis:
+    image: redis:alpine
+    command: redis-server --port 6379
+    container_name: redis_boot
+    hostname: redis_boot
+    labels:
+      - "name=redis"
+      - "mode=standalone"
+    ports:
+      - 6379:6379
 
 #  mongo_seed:
 #    image: mongo:6.0.4
