--- a/infra/infra-redis/src/main/resources/application-infra-redis.yml
+++ b/infra/infra-redis/src/main/resources/application-infra-redis.yml
@@ -1,13 +1,15 @@
----
 # config 참고) https://backtony.github.io/spring/redis/2021-08-29-spring-redis-1/
 
 spring:
-  redis:
-    pool:
-      min-idle: 0
-      max-idle: 8
-      max-active: 8
-
+  config.activate.on-profile: local
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      pool:
+        min-idle: 0
+        max-idle: 8
+        max-active: 8
 ---
 spring:
   config.activate.on-profile: dev
